# bioinformatics-toolbox

./: .gitignore  README.md  pyproject.toml  samples.ipynb
docs/: samples.ipynb
sample_data/: test.fasta
toolbox/: alignment.py  fasta.py  hamming.py  msa.py  pdb.py
